--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -13,121 +13,123 @@
     
     <body class="mainHeader">
         <!-- headerのフラグメント作成⇒他のHTMLで使用できるようにする -->
-	    <!-- 新：-->
+        <!-- 新：-->
         <div th:insert="~{header :: Header}"></div>
-        
-     <div class="list-items">
+    
         <div class="today-tasklist">  
-                <div class="today">
+            <div class="today">
+                <div class="list-counts">
                     <!-- 現在時刻表示 -->
                     <div id="current-time"  class="current-time">
-                    <h3 class="task-date" id="taskDate">--月--日(-)のタスク</h3>
-                    <h3 id="clock"> --時--分--秒</h3>
-                    <h3 id="IncompleteTasksTitle"> 未完了タスク件数</h3>
+                        <h3 class="task-date" id="taskDate">--月--日(-)のタスク</h3>
+                        <h3 id="clock"> --時--分--秒</h3>
                     </div>
-                    <div class="list-counts">
-                        <ul class="today-list">
-                            <li th:each="today : ${todayList}"
-                                th:if="${today != null}"
-                                th:class="|today-item priority-${today.priority.toLowerCase()}|"
-                                th:attr=" data-deadline-date=${today.deadline}, 
-                                        data-deadline-time=${today.time != null ? today.time : '00:00'}">
-                                <div class="item-main">
-                                    <!-- 時間も null 安全ガード -->
-                                    <span class="item-time"
-                                            th:text="${today.time != null   ? #temporals.format(today.time, 'H時mm分') : ''}">
-                                        00時00分
-                                    </span>
-                                    <!-- タイトルも null 安全ガード -->
-                                    <span class="item-title"
-                                            th:text="${today.title != null ? today.title : ''}">
-                                        タスク名
-                                    </span>
-                                </div>
-                                <span class="item-priority"
-                                    th:text="${today.priority != null ? today.priority : ''}">
-                                高
+                    <ul class="today-list">
+                        <li th:each="today : ${todayList}"
+                            th:if="${today != null}"
+                            th:class="|today-item priority-${today.priority.toLowerCase()}|"
+                            th:attr=" data-deadline-date=${today.deadline}, 
+                                    data-deadline-time=${today.time != null ? today.time : '00:00'}">
+                            <div class="item-main">
+                                <!-- 時間も null 安全ガード -->
+                                <span class="item-time"
+                                        th:text="${today.time != null   ? #temporals.format(today.time, 'H時mm分') : ''}">
+                                    00時00分
                                 </span>
-                            </li>
-                        </ul>
-                        <div class="task-counts"><!--未完了件数-->
-                            <div class="task-counts-row expired">
-                                <h2>今日以前</h2>
-                                <span th:text="${todayIncompleteTasks} + '件'">0件</span>
+                                <!-- タイトルも null 安全ガード -->
+                                <span class="item-title"
+                                        th:text="${today.title != null ? today.title : ''}">
+                                    タスク名
+                                </span>
                             </div>
-                            <div class="task-counts-row all-incomplete">
-                                <h2>全件　　</h2>
-                                <span th:text="${allIncompleteTasks} + '件'">0件</span>
-                            </div>
+                            <span class="item-priority"
+                                th:text="${today.priority != null ? today.priority : ''}">
+                            高
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="task-counts"><!--未完了件数-->
+                    <h3 id="IncompleteTasksTitle"> 未完了タスク件数</h3>
+                    <div class="task-counts-table">
+                        <div class="task-counts-row expired">
+                            <span>今日以前</span>
+                            <span id="todayIncompleteTasks" th:text="${todayIncompleteTasks} + '件'">0件</span>
+                        </div>
+                        <div class="task-counts-row all-incomplete">
+                            <span>全件</span>
+                            <span id="allIncompleteTasks" th:text="${allIncompleteTasks} + '件'">0件</span>
                         </div>
                     </div>
                 </div>
+            </div>
 
-            
+        
 
-                <div class="tasklist">
-                    <h2 class="table-title">現在のタスク一覧</h2>
-                    <div class="selectbutton">
-                        <button id="selectList">一括選択モード</button>
-                        <button id="completeSelectedButton">完了</button>
-                        <button id="deleteTasks">削除</button>
-                    </div>
-                    <!-- 固定したい見出し -->
-                    <div class="table-wrapper">
-                        <table border="1" class="task-table" id="taskTable">
-                            <thead>
+            <div class="tasklist">
+                <h2 class="table-title">現在のタスク一覧</h2>
+                <div class="selectbutton">
+                    <button id="selectList">一括選択モード</button>
+                    <button id="completeSelectedButton">完了</button>
+                    <button id="deleteTasks">削除</button>
+                </div>
+                <!-- 固定したい見出し -->
+                <div class="table-wrapper">
+                    <table border="1" class="task-table" id="taskTable">
+                        <thead>
                             <tr>
-                            <th class="task-checkbutton">
-                                <button id="checkAllButton">全選択</button>
-                            </th>
-                            <th class="hidden">ID</th>
-                            <th class="task-name">タスク</th>
-                            <th class="task-deadline">期限 <button id="filterDateBtn" class="col-btn">▼</button></th>
-                            <th class="task-time">時間</th>
-                            <th class="task-priority">優先度 <button id="filterPriorityBtn" class="col-btn">▼</button></th>
-                            <th class="task-done">状態 <button id="filterDoneBtn" class="col-btn">▼</button></th>
-                            <th class="task-edit">編集</th>
-                            <th class="task-delete">削除</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="task : ${taskList}" th:attr="data-done=${task.done},data-deadline=${task.deadline}">
-                        <td>
-                            <label class="circle-checkbox">
-                                <input type="checkbox" name="taskCheckbox" th:value="${task.id}"  class="checkbox" />
-                                <span class="checkmark"></span>
-                            </label>
-                        </td>
-                            <td class="hidden" th:text="${task.id}"></td><!--↓詳細pop表示-->
-                            <td th:text="${task.title}" onclick="openDetailDialogFromTitle(this)" style="cursor: pointer;"></td>
-                            <td class="hidden" th:text="${task.detail}"></td><!--隠し詳細欄-->
-                            <td width="100px" th:text="${task.deadline}"></td>
-                            <td width="100px" th:text="${task.time}"></td>
-                            <td width="50px" th:text="${task.priority}"></td>
-                            <td width="50px" th:text="${task.done} ? '完了': '未完了'"></td>
-                            <td width="50px">
-                            <button
-                                type="button"
-                                class="update-button"
-                                th:data-id="${task.id}"
-                                th:data-title="${task.title}"
-                                th:data-detail="${task.detail}"
-                                th:data-deadline="${task.deadline}"
-                                th:data-time="${task.time}"
-                                th:data-priority="${task.priority}"
-                                th:data-done="${task.done}"
-                                onclick="openUpdateDialog(this)"
-                            >編集</button> 
-                            </td>
-                            <td width="50px">
-                                <form action="#" th:action="@{/list/delete}" method="post">
-                                    <button type="submit" id="delete_button">削除</button>
-                                    <input type="hidden" name="id" th:value="${task.id}" />
-                                </form>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                                <th class="task-checkbutton">
+                                    <button id="checkAllButton">全選択</button>
+                                </th>
+                                <th class="hidden">ID</th>
+                                <th class="task-name">タスク</th>
+                                <th class="task-deadline">期限 <button id="filterDateBtn" class="col-btn">▼</button></th>
+                                <th class="task-time">時間</th>
+                                <th class="task-priority">優先度 <button id="filterPriorityBtn" class="col-btn">▼</button></th>
+                                <th class="task-done">状態 <button id="filterDoneBtn" class="col-btn">▼</button></th>
+                                <th class="task-edit">編集</th>
+                                <th class="task-delete">削除</th>
+                            </tr>
+                        </thead>
+                            <tbody>
+                                <tr th:each="task : ${taskList}" th:attr="data-done=${task.done},data-deadline=${task.deadline}">
+                                    <td>
+                                        <label class="circle-checkbox">
+                                            <input type="checkbox" name="taskCheckbox" th:value="${task.id}"  class="checkbox" />
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </td>
+                                    <td class="hidden" th:text="${task.id}"></td><!--↓詳細pop表示-->
+                                    <td th:text="${task.title}" onclick="openDetailDialogFromTitle(this)" style="cursor: pointer;"></td>
+                                    <td class="hidden" th:text="${task.detail}"></td><!--隠し詳細欄-->
+                                    <td width="100px" th:text="${task.deadline}"></td>
+                                    <td width="100px" th:text="${task.time}"></td>
+                                    <td width="50px" th:text="${task.priority}"></td>
+                                    <td width="50px" th:text="${task.done} ? '完了': '未完了'"></td>
+                                    <td width="50px">
+                                    <button
+                                        type="button"
+                                        class="update-button"
+                                        th:data-id="${task.id}"
+                                        th:data-title="${task.title}"
+                                        th:data-detail="${task.detail}"
+                                        th:data-deadline="${task.deadline}"
+                                        th:data-time="${task.time}"
+                                        th:data-priority="${task.priority}"
+                                        th:data-done="${task.done}"
+                                        onclick="openUpdateDialog(this)"
+                                    >編集</button> 
+                                    </td>
+                                    <td width="50px">
+                                        <form action="#" th:action="@{/list/delete}" method="post">
+                                            <button type="submit" id="delete_button">削除</button>
+                                            <input type="hidden" name="id" th:value="${task.id}" />
+                                        </form>
+                                    </td>
+                                </tr>
+                            </tbody>
+                    </table>
+                </div>
             </div>
         </div>
 
@@ -142,26 +144,26 @@
                     <textarea id="add_detail" name="detail" minlength="1" maxlength="400" placeholder="1~400文字まで入力可能" rows="4"></textarea>
                     <label>期限</label>
                     <div class="deadline-inputs">
-                    <input id="add_deadline" name="deadline" type="date" />
-                    <input id="add_time" name="time" type="time" value="09:00"/>
+                        <input id="add_deadline" name="deadline" type="date" />
+                        <input id="add_time" name="time" type="time" value="09:00"/>
                     </div>
-                        <div class="priority-status">
-                            <div class="field">
-                            <label>優先度</label>
-                                <select id="add_priority" name="priority">
-                                <option value="高">高</option>
-                                <option value="中" selected>中</option>
-                                <option value="低">低</option>
-                                </select>
-                            </div>
+                    <div class="priority-status">
+                        <div class="field">
+                        <label>優先度</label>
+                            <select id="add_priority" name="priority">
+                            <option value="高">高</option>
+                            <option value="中" selected>中</option>
+                            <option value="低">低</option>
+                            </select>
                         </div>
-                        <div class="add-button">
-                            <button type="submit">登録</button>
-                        <button type="button"onclick="document.getElementById('TodoDialog').style.display='none';">キャンセル</button>
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="add-button">
+                        <button type="submit">登録</button>
+                    <button type="button"onclick="document.getElementById('TodoDialog').style.display='none';">キャンセル</button>
+                    </div>
+                </form>
             </div>
+        </div>
 
 
         <!-- pop(update) -->
@@ -175,34 +177,34 @@
                     <textarea id="update_detail" name="detail" minlength="1" maxlength="400" placeholder="1~400文字まで入力可能" rows="4" ></textarea>
                     <label>期限</label>
                     <div class="deadline-inputs">
-                    <input id="update_deadline" name="deadline" type="date" />
-                    <input id="update_time" name="time" type="time" />
+                        <input id="update_deadline" name="deadline" type="date" />
+                        <input id="update_time" name="time" type="time" />
                     </div>
-                        <div class="priority-status">
-                            <div class="field">
+                    <div class="priority-status">
+                        <div class="field">
                             <label>優先度</label>
-                                <select id="update_priority" name="priority">
+                            <select id="update_priority" name="priority">
                                 <option value="高">高</option>
                                 <option value="中" selected>中</option>
                                 <option value="低">低</option>
-                                </select>
-                            </div>
-                            <div class="field">
+                            </select>
+                        </div>
+                        <div class="field">
                             <label>状態</label>
-                                <select id="update_status" name="done">
+                            <select id="update_status" name="done">
                                 <option value="false">未完了</option>
                                 <option value="true">完了</option>
-                                </select>
-                            </div>
+                            </select>
                         </div>
-                        <div class="update-button">
-                            <button type="submit">編集</button>
-                            <button type="reset"  onclick="document.getElementById('updateDialog').style.display='none';">キャンセル</button>
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="update-button">
+                        <button type="submit">編集</button>
+                        <button type="reset"  onclick="document.getElementById('updateDialog').style.display='none';">キャンセル</button>
+                    </div>
+                </form>
             </div>
         </div>
+        <!-- </div> -->
         <!--詳細pop-->
         <div id="detailPopup">
             <h3>タスク詳細</h3>
